# autotoolsvscmake

./: README.md
examples/pricetable_autotool/: .gitignore  Makefile.am  configure.ac
examples/pricetable_autotool/PriceTable/: Makefile.am  PriceTable.cc  PriceTable.h
examples/pricetable_cmake/: CMakeLists.txt  config.h.in  main.cc
examples/pricetable_cmake/PriceTable/: CMakeLists.txt
