# Without libtool -- static library
#lib_LIBRARIES = %reldir%/libpricetable.a
#%canon_reldir%_libpricetable_a_SOURCES =  %reldir%/PriceTable.cc

# libtool 
lib_LTLIBRARIES =  %reldir%/libpricetable.la
%canon_reldir%_libpricetable_la_SOURCES =  %reldir%/PriceTable.cc
%canon_reldir%_libpricetable_la_LDFLAGS = -version-info 0:0:0